@@ -13,15 +13,31 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class ListingService {
+
     private final ListingRepository listingRepository;
     private final UserRepository userRepository;
     private final ListingMapper listingMapper;
 
     public List<ListingResponseDTO> getEnabledListings() {
-        return listingRepository.findByEnabledTrue().stream()
+        return listingRepository.findByEnabledTrue()
+                .stream()
                 .map(listingMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Transactional
+    public ListingResponseDTO createListing(ListingRequestDTO dto) {
+        if (!userRepository.existsById(dto.getOwnerId())) {
+            throw new IllegalArgumentException("Owner not found");
+        }
+
+        Listing listing = listingMapper.toEntity(dto);
+
+        return listingMapper.toDto(
+                listingRepository.save(listing)
+        );
     }
 
     @Transactional
